Updated all the documentation search boxes

--- a/content/tools/via.html
+++ b/content/tools/via.html
@@ -157,11 +157,9 @@ function checkQuery() {
         <a href="http://www.apache.org/"><img alt="The Apache Software Foundation" src="http://www.apache.org/images/feather-small.png" /></a>
       </div>
       <div class="fourcol right last" id="searchbox">
-        <form action="/search.html" id="cse-search-box" name="cse-search-box">
-          <input type="hidden" name="cx" value="014552695451971253177:hliljs75koi" /><input type=
-          "hidden" name="cof" value="FORID:10" /><input type="hidden" name="ie" value=
-          "UTF-8" /><input type="text" name="q" size="22" style="font-size: 80%"/><input type="submit" name="sa" value=
-          "Search Documentation" style="font-size: 80%"/>
+        <form action="https://docs.trafficserver.apache.org/en/latest/search.html" id="cse-search-box" name="cse-search-box">
+          <input type="text" name="q" size="22" style="font-size: 80%" />
+          <input type="submit" name="sa" value="Search Documentation" style="font-size: 80%" />
         </form>
       </div>
     </div>
