--- a/content/index.html
+++ b/content/index.html
@@ -41,9 +41,8 @@
     </div>
     <div class="fourcol right last" id="searchbox">
       <form action="https://docs.trafficserver.apache.org/en/latest/search.html" id="cse-search-box" name="cse-search-box">
-        <input type="hidden" name="cx" value="014552695451971253177:hliljs75koi" /><input type="hidden" name="cof"
-          value="FORID:10" /><input type="hidden" name="ie" value="UTF-8" /><input type="text" name="q" size="22" style="font-size: 80%" /><input
-          type="submit" name="sa" value="Search Documentation" style="font-size: 80%" />
+         <input type="text" name="q" size="22" style="font-size: 80%" />
+         <input type="submit" name="sa" value="Search Documentation" style="font-size: 80%" />
       </form>
     </div>
   </div>
