Changed documentation links and search to use 8.0.x

--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -40,7 +40,7 @@
       <a href="http://www.apache.org/"><img alt="The Apache Software Foundation" src="http://www.apache.org/images/feather-small.png" /></a>
     </div>
     <div class="fourcol right last" id="searchbox">
-      <form action="https://docs.trafficserver.apache.org/en/latest/search.html" id="cse-search-box" name="cse-search-box">
+      <form action="https://docs.trafficserver.apache.org/en/8.0.x/search.html" id="cse-search-box" name="cse-search-box">
         <input type="text" name="q" size="22" style="font-size: 80%" />
         <input type="submit" name="sa" value="Search Documentation" style="font-size: 80%" />
       </form>
@@ -52,7 +52,7 @@
     <div class="ninecol">
       <a href="http://trafficserver.apache.org/">Home</a>
       <a href="downloads">Downloads</a>
-      <a href="https://docs.trafficserver.apache.org/en/latest/index.html">Documentation</a>
+      <a href="https://docs.trafficserver.apache.org">Documentation</a>
       <a href="https://cwiki.apache.org/confluence/display/TS/Apache+Traffic+Server">Wiki</a>
       <a href="https://github.com/apache/trafficserver/issues">Issues</a>
       <a href="https://ci.trafficserver.apache.org/">CI</a>
