--- a/content/downloads.html
+++ b/content/downloads.html
@@ -42,7 +42,7 @@
       <div class="ninecol">
         <a href="http://trafficserver.apache.org/">Home</a>
         <a href="/downloads">Downloads</a>
-        <a href="http://docs.trafficserver.apache.org/en/latest/index.html">Documentation</a>
+        <a href="http://docs.trafficserver.apache.org">Documentation</a>
         <a href="https://cwiki.apache.org/confluence/display/TS/Apache+Traffic+Server">Wiki</a>
         <a href="https://github.com/apache/trafficserver/issues">Issues</a>
         <a href="/users.html">Customers</a>
