--- a/content/tools/via.html
+++ b/content/tools/via.html
@@ -157,7 +157,7 @@ function checkQuery() {
         <a href="http://www.apache.org/"><img alt="The Apache Software Foundation" src="http://www.apache.org/images/feather-small.png" /></a>
       </div>
       <div class="fourcol right last" id="searchbox">
-        <form action="https://docs.trafficserver.apache.org/en/8.0.x/search.html" id="cse-search-box" name="cse-search-box">
+        <form action="https://docs.trafficserver.apache.org/en/latest/search.html" id="cse-search-box" name="cse-search-box">
           <input type="text" name="q" size="22" style="font-size: 80%" />
           <input type="submit" name="sa" value="Search Documentation" style="font-size: 80%" />
         </form>
