Updated links on via decoder page

--- a/content/tools/via.html
+++ b/content/tools/via.html
@@ -169,9 +169,9 @@ function checkQuery() {
     <div class="eightcol">
       <a href="http://trafficserver.apache.org/">Home</a>
       <a href="/downloads">Downloads</a>
-      <a href="/docs/">Documentation</a>
+      <a href="https://docs.trafficserver.apache.org/en/latest/index.html">Documentation</a>
       <a href="https://cwiki.apache.org/confluence/display/TS/Apache+Traffic+Server">Wiki</a>
-      <a href="https://issues.apache.org/jira/browse/TS">Issues</a>
+      <a href="https://github.com/apache/trafficserver/issues">Issues</a>
       <a href="/users.html">Customers</a>
       <a href="/acknowledgements.html">Acknowledgements</a>
       <a href="/assistance.html">Assistance</a>
