--- a/content/assistance.html
+++ b/content/assistance.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="styles/1140.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/pygments_style.css" />
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold" />
     <style type="text/css">
         .headerlink, .elementid-permalink {
             visibility: hidden;
