--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="/styles/styles.css" media="screen" />
   <!--css3-mediaqueries-js - http://code.google.com/p/css3-mediaqueries-js/ - Enables media queries in some unsupported browsers-->
   <script type="text/javascript" src="/js/css3-mediaqueries.js"></script>
-  <link href="http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold" rel="stylesheet">
 
   <title>Apache Traffic Server</title>
 
