--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
   <meta charset="utf-8" />
   <meta name="google-site-verification" content="0Zvqk8EoyLzvCzEZj86bw4McxpCrEzUskO2c1n5OqE8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- The 1140px Grid - http://cssgrid.net/ -->
+  <!-- The 1140px Grid - https://cssgrid.net/ -->
   <link rel="stylesheet" type="text/css" href="/styles/1140.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/styles/styles.css" media="screen" />
-  <!--css3-mediaqueries-js - http://code.google.com/p/css3-mediaqueries-js/ - Enables media queries in some unsupported browsers-->
+  <!--css3-mediaqueries-js - https://code.google.com/p/css3-mediaqueries-js/ - Enables media queries in some unsupported browsers-->
   <script type="text/javascript" src="/js/css3-mediaqueries.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold" rel="stylesheet">
 
@@ -20,7 +20,7 @@
        The ASF licenses this file to you under the Apache License, Version 2.0 (the &quot;License&quot;); you
        may not use this file except in compliance with the License.  You may obtain a copy of the License at
 
-           http://www.apache.org/licenses/LICENSE-2.0
+           https://www.apache.org/licenses/LICENSE-2.0
 
       Unless required by applicable law or agreed to in writing, software distributed under the License is
       distributed on an &quot;AS IS&quot; BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
@@ -37,7 +37,7 @@
       <a href="/"><img class="logo" alt="Apache Traffic Server" src="/images/press/ts_logo_tm_380x73.png" /></a>
     </div>
     <div class="fourcol">
-      <a href="http://www.apache.org/"><img alt="The Apache Software Foundation" src="http://www.apache.org/images/feather-small.png" /></a>
+      <a href="https://www.apache.org/"><img alt="The Apache Software Foundation" src="https://www.apache.org/images/feather-small.png" /></a>
     </div>
     <div class="fourcol right last" id="searchbox">
       <form action="https://docs.trafficserver.apache.org/en/latest/search.html" id="cse-search-box" name="cse-search-box">
@@ -50,7 +50,7 @@
 
   <div class="row nav">
     <div class="ninecol">
-      <a href="http://trafficserver.apache.org/">Home</a>
+      <a href="https://trafficserver.apache.org/">Home</a>
       <a href="downloads">Downloads</a>
       <a href="https://docs.trafficserver.apache.org/en/latest/index.html">Documentation</a>
       <a href="https://cwiki.apache.org/confluence/display/TS/Apache+Traffic+Server">Wiki</a>
@@ -62,9 +62,9 @@
       <a href="/assistance.html">Assistance</a>
     </div>
     <div class="threecol last right">
-      <a href="http://apache.org/security/">Security</a>
-      <a href="http://www.apache.org/foundation/sponsorship.html">Donate</a>
-      <a href="http://www.apache.org/foundation/thanks.html">Thanks</a>
+      <a href="https://apache.org/security/">Security</a>
+      <a href="https://www.apache.org/foundation/sponsorship.html">Donate</a>
+      <a href="https://www.apache.org/foundation/thanks.html">Thanks</a>
     </div>
   </div>
 
@@ -137,7 +137,7 @@
         <ul>
           <li>
             <b>Proven</b>
-            <p>Handling over 400TB a day at <a href="http://www.yahoo.com/">Yahoo!</a> both as
+            <p>Handling over 400TB a day at <a href="https://www.yahoo.com/">Yahoo!</a> both as
               forward and reverse proxies, Apache Traffic Server is battle
               hardened. Also visit our <a href="users.html">Customers page</a> for
               some of our corporate users and supporters.</p>
@@ -356,11 +356,11 @@
     <div class="sixcol last">
       <div id="blurbbox">
         <ul>
-          <li><a href="http://www.apache.org/licenses/">License</a></li>
+          <li><a href="https://www.apache.org/licenses/">License</a></li>
           <li><a href="https://cwiki.apache.org/confluence/display/TS/Building">Build Instructions</a></li>
           <li><a href="https://cwiki.apache.org/confluence/display/TS/Committers">Committers</a></li>
-          <li><a href="http://mail-archives.apache.org/mod_mbox/trafficserver-users/">Users Archives</a></li>
-          <li><a href="http://mail-archives.apache.org/mod_mbox/trafficserver-dev/">Dev Archives</a></li>
+          <li><a href="https://mail-archives.apache.org/mod_mbox/trafficserver-users/">Users Archives</a></li>
+          <li><a href="https://mail-archives.apache.org/mod_mbox/trafficserver-dev/">Dev Archives</a></li>
         </ul>
       </div>
     </div>
@@ -370,16 +370,16 @@
     <div class="tencol">
 
       Copyright &copy; 2018
-      <a href="http://www.apache.org/">The Apache Software Foundation</a>.
+      <a href="https://www.apache.org/">The Apache Software Foundation</a>.
       Licensed under
-      the <a href="http://www.apache.org/licenses/">Apache License</a>,
+      the <a href="https://www.apache.org/licenses/">Apache License</a>,
       Version 2.0. Apache Traffic Server, Apache,
       the Apache Traffic Server logo, and the Apache feather logo are
       trademarks of The Apache Software Foundation.
     </div>
     <div class="twocol right last">
       <span id="apache_logo">
-        <a href="http://www.apache.org/"><img alt="The Apache Software Foundation" src="http://www.apache.org/images/feather-small.png" /></a>
+        <a href="https://www.apache.org/"><img alt="The Apache Software Foundation" src="https://www.apache.org/images/feather-small.png" /></a>
       </span>
     </div>
   </div>
