--- a/content/tools/via.html
+++ b/content/tools/via.html
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- The 1140px Grid - http://cssgrid.net/ -->
+    <!-- The 1140px Grid - https://cssgrid.net/ -->
     <link rel="stylesheet" type="text/css" href="/styles/1140.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/styles/styles.css" media="screen" />
-    <!--css3-mediaqueries-js - http://code.google.com/p/css3-mediaqueries-js/ - Enables media queries in some unsupported browsers-->
+    <!--css3-mediaqueries-js - https://code.google.com/p/css3-mediaqueries-js/ - Enables media queries in some unsupported browsers-->
     <script type="text/javascript" src="/js/css3-mediaqueries.js"></script>
-    <link href="http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold" rel="stylesheet">
     <title>Via Decoder - Apache Traffic Server</title>
-    <!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements.  See the NOTICE file distributed with this work for additional information regarding copyright ownership.  The ASF licenses this file to you under the Apache License, Version 2.0 (the &quot;License&quot;); you may not use this file except in compliance with the License.  You may obtain a copy of the License at . http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an &quot;AS IS&quot; BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the License for the specific language governing permissions and limitations under the License. -->
+    <!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements.  See the NOTICE file distributed with this work for additional information regarding copyright ownership.  The ASF licenses this file to you under the Apache License, Version 2.0 (the &quot;License&quot;); you may not use this file except in compliance with the License.  You may obtain a copy of the License at . https://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an &quot;AS IS&quot; BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the License for the specific language governing permissions and limitations under the License. -->
   <script type="text/javascript">
 var codes = {}
 codes[1] = {}
@@ -154,7 +154,7 @@ function checkQuery() {
         <a href="/"><img class="logo" alt="Apache Traffic Server" src="/images/trans_logo_tm_380x69.png" /></a>
       </div>
       <div class="fourcol">
-        <a href="http://www.apache.org/"><img alt="The Apache Software Foundation" src="http://www.apache.org/images/feather-small.png" /></a>
+        <a href="https://www.apache.org/"><img alt="The Apache Software Foundation" src="https://www.apache.org/images/feather-small.png" /></a>
       </div>
       <div class="fourcol right last" id="searchbox">
         <form action="https://docs.trafficserver.apache.org/en/latest/search.html" id="cse-search-box" name="cse-search-box">
@@ -167,7 +167,7 @@ function checkQuery() {
 
   <div class="row nav">
     <div class="eightcol">
-      <a href="http://trafficserver.apache.org/">Home</a>
+      <a href="https://trafficserver.apache.org/">Home</a>
       <a href="/downloads">Downloads</a>
       <a href="https://docs.trafficserver.apache.org/en/latest/index.html">Documentation</a>
       <a href="https://cwiki.apache.org/confluence/display/TS/Apache+Traffic+Server">Wiki</a>
@@ -177,9 +177,9 @@ function checkQuery() {
       <a href="/assistance.html">Assistance</a>
     </div>
     <div class="fourcol last right">
-      <a href="http://apache.org/security/">Security</a>
-      <a href="http://www.apache.org/foundation/sponsorship.html">Donate</a>
-      <a href="http://www.apache.org/foundation/thanks.html">Thanks</a>
+      <a href="https://apache.org/security/">Security</a>
+      <a href="https://www.apache.org/foundation/sponsorship.html">Donate</a>
+      <a href="https://www.apache.org/foundation/thanks.html">Thanks</a>
     </div>
   </div>
 
@@ -202,16 +202,16 @@ function checkQuery() {
     <div class="tencol">
 
       Copyright  &copy; 2012
-      <a href="http://www.apache.org/">The Apache Software Foundation</a>.
+      <a href="https://www.apache.org/">The Apache Software Foundation</a>.
       Licensed under
-      the <a href="http://www.apache.org/licenses/">Apache License</a>,
+      the <a href="https://www.apache.org/licenses/">Apache License</a>,
       Version 2.0. Apache Traffic Server, Apache,
       the Apache Traffic Server logo, and the Apache feather logo are
       trademarks of The Apache Software Foundation.
     </div>
     <div class="twocol right last">
       <span id="apache_logo">
-        <a href="http://www.apache.org/"><img alt="The Apache Software Foundation" src="http://www.apache.org/images/feather-small.png" /></a>
+        <a href="https://www.apache.org/"><img alt="The Apache Software Foundation" src="https://www.apache.org/images/feather-small.png" /></a>
       </span>
     </div>
   </div>
