--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -287,6 +287,11 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
+          <li><b>Aug 13, 2019:</b>Today we announce the release of both v8.0.4
+          and v7.1.7. These are configuration and bug fix releases, and in
+          particular, addresses a series of HTTP/2 vulnerabilities. We
+          strongly recommend everyone to upgrade to one of these versions, or
+          otherwise disable HTTP/2.</li>
           <li><b>March 21, 2019:</b>Release of 8.0.3. This is third patch release
             to 8.0.0. It includes bug fixes and minor updates.</li>
           <li><b>January 29, 2019:</b>Release of 8.0.2. This is second patch release
