--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -287,6 +287,9 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
+          <li><b>Aug 20, 2019:</b>We are releasing both v8.0.5 and v7.1.8 which
+            fixes a HTTP/2 vulnerability. We strongly recommend everyone to upgrade
+            to one of these versions or disable HTTP/2 support.</li>
           <li><b>Aug 13, 2019:</b>Today we announce the release of both v8.0.4
           and v7.1.7. These are configuration and bug fix releases, and in
           particular, addresses a series of HTTP/2 vulnerabilities. We
