--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -287,6 +287,9 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
+          <li><b>Feb 29, 2020:</b>We are releasing both v8.0.6 and v7.1.9 which
+            include bug fixes.  We recommend everyone to upgrade to one of these
+            versions of ATS.</li>
           <li><b>Aug 20, 2019:</b>We are releasing both v8.0.5 and v7.1.8 which
             fixes a HTTP/2 vulnerability. We strongly recommend everyone to upgrade
             to one of these versions or disable HTTP/2 support.</li>
