--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -287,6 +287,9 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
+          <li><b>Apr 16, 2020:</b>We are releasing both v8.0.7 and v7.1.10 which
+            include bug fixes.  We recommend everyone to upgrade to one of these
+            versions of ATS.</li>
           <li><b>Feb 29, 2020:</b>We are releasing both v8.0.6 and v7.1.9 which
             include bug fixes.  We recommend everyone to upgrade to one of these
             versions of ATS.</li>
