Added 7.1.11 and 8.0.8 releases

--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -287,6 +287,9 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
+          <li><b>Apr 16, 2020:</b>We are releasing both v8.0.8 and v7.1.11 which
+            include bug fixes.  We recommend everyone to upgrade to one of these
+            versions of ATS.</li>
           <li><b>Apr 16, 2020:</b>We are releasing both v8.0.7 and v7.1.10 which
             include bug fixes.  We recommend everyone to upgrade to one of these
             versions of ATS.</li>
@@ -329,23 +332,6 @@
             LTS train is now available. There are no new features in this
             release, but there are close to 100 fixes! Download ATS v7.1.2
             from the normal download mirrors now!</li>
-          <li><b>September 7, 2017:</b> The first patch release for the v7.1
-            LTS train is now available to. There are no new features in this
-            release, it's a bug fix release only. Download ATS v7.1.1 from the
-            normal download mirrors now!</li>
-          <li><b>Aug 10, 2017:</b> The latest LTS release, v6.2.2, is now
-            available from the Downloads section. This is the LTS release for
-            6.x</li>
-          <li><b>July 24, 2017:</b> We are very proud to announce the
-            immediate release of v7.1.0, which is now available from the
-            Downloads section. This is an LTS release, supported until
-            7/2019.</li>
-          <li><b>Jan 20, 2017:</b> The latest LTS release, v6.2.1, is now
-            available from the Downloads section. This is the LTS release for
-            6.x</li>
-          <li><b>Nov 7, 2016:</b> We are happy to announce our next major
-            release, v7.0.0! This release includes HTTP/2 Push and many other
-            features and bug fixes.</li>
         </ul>
       </div>
     </div>
