--- a/content/downloads.html
+++ b/content/downloads.html
@@ -61,7 +61,7 @@
     <div class="row content">
       <div class="twelvecol">
         <div id="content">
-          <p>The latest stable release of Apache Traffic Server is 8.0.8, released on 2020-06-23.
+          <p>The latest stable release of Apache Traffic Server is v8.1.0, released on 2020-08-28.
 In addition, we continue to support the v7.1.x LTS release train, currently v7.1.11
 which was released on 2020-06-23. We follow the <a href="http://semver.org">Semantic Versioning</a>
 scheme. The goal is to release patch releases frequently, and minor releases as needed.
@@ -72,15 +72,15 @@ the PGP signatures the <a href="https://www.apache.org/dist/trafficserver/KEYS">
 will be needed.  You can also
 <a href="https://archive.apache.org/dist/trafficserver/">browse through all releases</a>
 and hash signatures.</p>
-<h1 id='current-v8x-release-808-808'>Current v8.x Release -- 8.0.8 <a href='#current-v8x-release-808-808' title='Permanent link to this' class='headerlink'>&para;</a></h1>
-<p>Apache Traffic Server v8.0.8 was released on June 23rd, 2020.
- [<a href="https://www.apache.org/dist/trafficserver/trafficserver-8.0.8.tar.bz2.asc"><code>PGP</code></a>]
- [<a href="https://www.apache.org/dist/trafficserver/trafficserver-8.0.8.tar.bz2.sha512"><code>SHA512</code></a>]</p>
-<p><a href="https://www.apache.org/dyn/closer.cgi/trafficserver/trafficserver-8.0.8.tar.bz2" class="download_ts">Traffic Server 8.0.8</a></p>
-<p>v8.0.8 is our latest stable release. Additional details for this release are in the
-<a href="https://raw.githubusercontent.com/apache/trafficserver/8.0.x/CHANGELOG-8.0.8">CHANGELOG</a>
-and the the related <a href="https://github.com/apache/trafficserver/milestone/37?closed=1">Github Issues and PRs</a>.</p>
-<p>For details on the v8.0.x release, please see
+<h1 id='current-v8x-release-810-810'>Current v8.x Release -- 8.1.0 <a href='#current-v8x-release-810-810' title='Permanent link to this' class='headerlink'>&para;</a></h1>
+<p>Apache Traffic Server v8.1.0 was released on August 28th, 2020.
+ [<a href="https://www.apache.org/dist/trafficserver/trafficserver-8.1.0.tar.bz2.asc"><code>PGP</code></a>]
+ [<a href="https://www.apache.org/dist/trafficserver/trafficserver-8.1.0.tar.bz2.sha512"><code>SHA512</code></a>]</p>
+<p><a href="https://www.apache.org/dyn/closer.cgi/trafficserver/trafficserver-8.1.0.tar.bz2" class="download_ts">Traffic Server 8.1.0</a></p>
+<p>v8.1.0 is our latest stable release. Additional details for this release are in the
+<a href="https://raw.githubusercontent.com/apache/trafficserver/8.1.x/CHANGELOG-8.1.0">CHANGELOG</a>
+and the the related <a href="https://github.com/apache/trafficserver/milestone/7?closed=1">Github Issues and PRs</a>.</p>
+<p>For details on the v8.x release, please see
 <a href="https://cwiki.apache.org/confluence/display/TS/What's+New+in+v8.0.x">8.0.x News</a>. There are also
 details about <a href="https://cwiki.apache.org/confluence/display/TS/Upgrading+to+v8.0">upgrading to 8.x</a>.</p>
 <h1 id='current-v7x-release-7111-7111'>Current v7.x Release -- 7.1.11 <a href='#current-v7x-release-7111-7111' title='Permanent link to this' class='headerlink'>&para;</a></h1>
