--- a/content/index.html
+++ b/content/index.html
@@ -287,19 +287,23 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
-          <li><b>Apr 16, 2020:</b>We are releasing both v8.0.8 and v7.1.11 which
+          <li><b>August 29, 2020:</b>We are pleased to announce the availability
+            of our latest stable release, v8.1.0! This is a significant bug and
+            performance improvement over the last v8.0.x release, and this is
+            also our current LTS train. No new release for 8.0.x is planned.</li>
+          <li><b>June 23, 2020:</b>We are releasing both v8.0.8 and v7.1.11 which
             include bug fixes.  We recommend everyone to upgrade to one of these
             versions of ATS.</li>
-          <li><b>Apr 16, 2020:</b>We are releasing both v8.0.7 and v7.1.10 which
+          <li><b>April 16, 2020:</b>We are releasing both v8.0.7 and v7.1.10 which
             include bug fixes.  We recommend everyone to upgrade to one of these
             versions of ATS.</li>
-          <li><b>Feb 29, 2020:</b>We are releasing both v8.0.6 and v7.1.9 which
+          <li><b>February 29, 2020:</b>We are releasing both v8.0.6 and v7.1.9 which
             include bug fixes.  We recommend everyone to upgrade to one of these
             versions of ATS.</li>
-          <li><b>Aug 20, 2019:</b>We are releasing both v8.0.5 and v7.1.8 which
+          <li><b>August 20, 2019:</b>We are releasing both v8.0.5 and v7.1.8 which
             fixes a HTTP/2 vulnerability. We strongly recommend everyone to upgrade
             to one of these versions or disable HTTP/2 support.</li>
-          <li><b>Aug 13, 2019:</b>Today we announce the release of both v8.0.4
+          <li><b>August 13, 2019:</b>Today we announce the release of both v8.0.4
           and v7.1.7. These are configuration and bug fix releases, and in
           particular, addresses a series of HTTP/2 vulnerabilities. We
           strongly recommend everyone to upgrade to one of these versions, or
