--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -287,9 +287,10 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
+          <li><b>August 17, 2021:</b>We are releasing both v9.1.0, which is our next current release.</li>b>
           <li><b>June 24, 2021:</b>We are releasing both v9.0.2 and v8.1.1 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</b>
           <li><b>April 16, 2021:</b>We are pleased to announce v9.0.1, which is bug-fix release on the v9.x LTS train.</li>
-          <li><b>December 14, 2020:</b>We are pleased to announce the first release of ATS v9.0.0, which is our new LTS release cycle. It's available for immediate downloads from the regular Downloads page..</li>
+          <li><b>December 14, 2020:</b>We are pleased to announce the first release of ATS v9.0.0, which is our new LTS release cycle. It's available for immediate downloads from the regular Downloads page.</li>
           <li><b>December 2, 2020:</b>We are releasing both v8.1.1 and v7.1.12 which include bug fixes. We recommend everyone to upgrade to one of these versions of ATS.</b>
           <li><b>August 29, 2020:</b>We are pleased to announce the availability of our latest stable release, v8.1.0! This is a significant bug and performance improvement over the last v8.0.x release, and this is also our current LTS train. No new release for 8.0.x is planned.</li>
           <li><b>June 23, 2020:</b>We are releasing both v8.0.8 and v7.1.11 which include bug fixes.  We recommend everyone to upgrade to one of these versions of ATS.</li>
