--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -287,6 +287,9 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
+          <li><b>March 11, 2021:</b>The latest version of the stable v9.x ATS
+          release is now available for immediate download! This version,
+          v9.1.2, is a bug fix release over previous 9.x releases.</li>
           <li><b>November 2, 2021:</b>We are releasing both v9.1.1 and v8.1.3 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</li>
           <li><b>August 17, 2021:</b>We are releasing both v9.1.0, which is our next current release.</li>
           <li><b>June 24, 2021:</b>We are releasing both v9.0.2 and v8.1.2 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</li>
