--- a/content/index.html
+++ b/content/index.html
@@ -287,6 +287,7 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
+          <li><b>August 9, 2022:</b>We are releasing both v9.1.3 and v8.1.5 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</li>
           <li><b>March 21, 2022:</b>The latest version of the stable v8.x ATS release is now available for download. This version, v8.1.4, is a bug fix release over previous 8.x releases.</li>
           <li><b>March 11, 2021:</b>The latest version of the stable v9.x ATS
           release is now available for immediate download! This version,
