--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -287,7 +287,8 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
-	  <li><b>June 12, 2024:</b> We are releasing both v9.2.1 and v8.1.7 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</li>
+	        <li><b>August 3, 2023:</b> We are releasing both v9.2.2 and v8.1.8. We recommend everyone to upgrade to one of these versions of ATS.</li>
+	        <li><b>June 12, 2023:</b> We are releasing both v9.2.1 and v8.1.7 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</li>
           <li><b>January 23, 2023:</b>The first version of the stable v9.2.x ATS branch is now available for download. This version, \
 v9.2.0, is a feature and bug fix release over previous v9.1.x releases.</li>
           <li><b>December 15, 2022:</b> We are releasing both v9.1.4 and v8.1.6 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</li>
