Updated index with 9.2.3 release

--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -287,7 +287,8 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
-	        <li><b>August 3, 2023:</b> We are releasing both v9.2.2 and v8.1.8. We recommend everyone to upgrade to one of these versions of ATS.</li>
+          <li><b>October 9, 2023:</b>We are releasing v9.2.3. We recommend everyone to upgrade to one of these versions of ATS.</li>
+          <li><b>August 3, 2023:</b> We are releasing both v9.2.2 and v8.1.8 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</li>
 	        <li><b>June 12, 2023:</b> We are releasing both v9.2.1 and v8.1.7 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</li>
           <li><b>January 23, 2023:</b>The first version of the stable v9.2.x ATS branch is now available for download. This version, \
 v9.2.0, is a feature and bug fix release over previous v9.1.x releases.</li>
@@ -301,8 +302,6 @@ v9.2.0, is a feature and bug fix release over previous v9.1.x releases.</li>
           <li><b>August 17, 2021:</b>We are releasing both v9.1.0, which is our next current release.</li>
           <li><b>June 24, 2021:</b>We are releasing both v9.0.2 and v8.1.2 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</li>
           <li><b>April 16, 2021:</b>We are pleased to announce v9.0.1, which is bug-fix release on the v9.x LTS train.</li>
-          <li><b>December 14, 2020:</b>We are pleased to announce the first release of ATS v9.0.0, which is our new LTS release cycle. It's available for immediate downloads from the regular Downloads page.</li>
-          <li><b>December 2, 2020:</b>We are releasing both v8.1.1 and v7.1.12 which include bug fixes. We recommend everyone to upgrade to one of these versions of ATS.</b>
         </ul>
       </div>
     </div>
