--- a/source/markdown/index.html
+++ b/source/markdown/index.html
@@ -287,7 +287,7 @@
     <div class="twelvecol">
       <div id="blurbbox">
         <ul>
-          <li><b>October 9, 2023:</b>We are releasing v9.2.3. We recommend everyone to upgrade to one of these versions of ATS.</li>
+          <li><b>October 9, 2023:</b>We are releasing both v9.2.3 and v8.1.9. We recommend everyone to upgrade to one of these versions of ATS.</li>
           <li><b>August 3, 2023:</b> We are releasing both v9.2.2 and v8.1.8 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</li>
 	        <li><b>June 12, 2023:</b> We are releasing both v9.2.1 and v8.1.7 which include security fixes. We recommend everyone to upgrade to one of these versions of ATS.</li>
           <li><b>January 23, 2023:</b>The first version of the stable v9.2.x ATS branch is now available for download. This version, \
